# bosch_image_proc_pbuffer_fork

./: stack.xml
camera_self_filter/: CMakeLists.txt  mainpage.dox  manifest.xml
camera_self_filter/include/camera_self_filter/: MeshDefinition.h  robotMeshModel.h
camera_self_filter/launch/: camera_self_filter.launch  camera_self_filter_kinect_head.launch  camera_self_filter_pros.launch  camera_self_filter_server_narrow_stereo_left.launch  camera_self_filter_wide_stereo_right.launch
camera_self_filter/src/: camera_self_filter.cpp  camera_self_filter_server.cpp  image_view.cpp  robotMeshModel.cpp
camera_self_filter/srv/: mask.srv
camera_self_filter/test/: test_client.cpp
curi_camera_self_filter/: mainpage.dox  manifest.xml
curi_camera_self_filter/launch/: camera_self_filter.launch  camera_self_filter_server_narrow_stereo.launch
pr2_camera_self_filter/: mainpage.dox  manifest.xml
pr2_camera_self_filter/launch/: camera_self_filter.launch
pr2_camera_self_filter/scripts/: run_xinit.py
